# whatsapp-voice-transcriber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: release-please.yaml  test.yaml
bruno_collection/Whatsapp Voice Transcriber/: Health.bru  Transcribe.bru  bruno.json
bruno_collection/Whatsapp Voice Transcriber/environments/: Cloudflare Tunnel.bru  Localhost.bru
src/whatsapp_transcribe/: __init__.py  __main__.py  authentication.py  commands.py  exporters.py  summarize.py  transcribe.py  twilio_client.py
tests/: conftest.py  test_commands.py  test_endpoint.py
