[project]
name = "whatsapp_transcribe"
version = "0.1.0"
description = "Transcriptions of Whatsapp Voice Messages"
authors = [
    {name = "Sebastian Moßburger", email = "sebastian-markgraf@t-online.de"},
]
dependencies = [
    "faster-whisper>=1.0.2",
    "fastapi>=0.111.0",
    "twilio>=9.0.5",
    "langchain>=0.2.1",
    "langchain-community>=0.2.3",
    "transformers>=4.41.2",
    "torch>=2.3.1",
    "flash-attention>=1.0.0",
    "langchain-text-splitters>=0.2.1",
    "extism>=1.0.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.7.0",
    "ruff>=0.4.3",
    "pytest>=8.2.0",
    "langchain-community>=0.2.1",
    "pytest-cov>=5.0.0",
    "pdoc>=14.5.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["D203", "D212", "N803"]
